sumo/tests/dfrouter/errors/false_net/options.dfrouter
--net-file=input/input_net.net.xml --detector-files=input_detectors.det.xml --detectors-output detectors_def.det.xml
